# crate

./: .cursorrules  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README.zh.md  VAULT.md  environment.yml  pyproject.toml
.cursor/rules/: architecture.md  lessons_from_bugs.md  python_coding.md  testing.md  vault_and_markdown.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ai-code-review.yml  ci.yml  crate-vault.yml
agent-skills/crate-vault/: SKILL.md
docs/: PRD.md  README.md  agent-skill.md  ci.md  lessons-learned.md  llm-wiki.md  obsidian-plugin.md  obsidian.md  providers.md  roadmap.md  technical-design.md  usage.md
obsidian-plugin/crate/: main.js  main.ts  manifest.json  package.json  tsconfig.json
prompts/: architecture_design.md  code_generation.md  semantic_wiki_check.md  wiki_compile.md  wiki_multi.md
scripts/: ai_review.py
src/crate/: __init__.py  activity_log.py  cli.py  compile_run.py  compile_state.py  compile_wiki.py  doctor.py  embedding_config.py  ephemeral.py  feedback.py  host_api.py  ingest_session.py  init_vault.py  lint_http.py  lint_wiki.py  llm.py  marp_render.py  multi_agent.py  qa_agent.py  raw_watch.py  raw_wiki_coverage.py  search_http.py  vault_paths.py  vault_search.py  vault_stats.py  vault_tools.py  vector_index.py  wiki_body_graph.py  wiki_check_apply.py  wiki_index_extend.py  wiki_normalize.py  wiki_promote.py  wiki_semantic.py
src/crate/stores/: __init__.py  raw_blob.py  sync_vault.py  wiki_database.py  wiki_paths.py
tests/: test_cli.py  test_cli_stats.py  test_compile_run.py  test_compile_state.py  test_compile_wiki.py  test_crate.py  test_doctor.py  test_ephemeral.py  test_feedback.py  test_ingest_session.py  test_init_vault.py  test_lint_wiki.py  test_multi_agent.py  test_qa_agent.py  test_raw_watch.py  test_raw_wiki_coverage.py  test_search_http.py  test_stores.py  test_vault_paths.py  test_vault_search.py  test_vault_stats.py  test_vault_tools.py  test_vector_index.py  test_wiki_body_graph.py  test_wiki_check_apply.py  test_wiki_normalize.py  test_wiki_promote.py  test_wiki_semantic.py
