[project]
name = "crate"
version = "0.1.0"
description = "Compile raw archives, tracked in the vault, into an encyclopedic wiki."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "CRATE contributors" }]
keywords = ["llm", "knowledge-base", "markdown", "vault", "wiki", "compiler"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
crate = "crate.cli:main"

[project.optional-dependencies]
watch = [
    "watchdog>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/<you>/crate"
Repository = "https://github.com/<you>/crate"
"Bug Tracker" = "https://github.com/<you>/crate/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["^tests/", "^scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
